# libgamepad

./: .gitignore  CMakeLists.txt  README.md  format.sh
.github/workflows/: package.yml  package2.yml
cmake/: i386-win32-msvc.cmake
include/: json.hpp  libgamepad.hpp
include/gamepad/: binding-default.hpp  binding-dinput.hpp  binding-linux.hpp  binding-xinput.hpp  binding.hpp  config.h  config.h.in  device.hpp  hook-dinput.hpp  hook-linux.hpp  hook-xinput.hpp  hook.hpp  log.hpp
include/json/: json11.hpp
pc/: gamepad.pc.in
src/: CMakeLists.txt  binding-default.cpp  binding-default.hpp  binding-dinput.cpp  binding-linux.cpp  binding.cpp  device-dinput.cpp  device-dinput.hpp  device-linux.cpp  device-linux.hpp  device-xinput.cpp  device.cpp  hook-dinput.cpp  hook-linux.cpp  hook-xinput.cpp  hook.cpp  json11.cpp  log.cpp
src/linux/: binding-linux.cpp  device-linux.cpp  device-linux.hpp  hook-linux.cpp
src/windows/: binding-dinput.cpp  binding-xinput.cpp  device-dinput.cpp  device-dinput.hpp  device-xinput.cpp  device-xinput.hpp  hook-dinput.cpp  hook-xinput.cpp
tests/: CMakeLists.txt  test.cpp
